tests/programs/taint/a4-test-cases/pass/taint_field_sensitive_pass.rice
// 1

#[secure]
fn secure() -> int {
  0 
}

fn main() {
  let t = (secure(), 1) in
  println(int_to_string(t.1))
}