tests/programs/taint/a4-test-cases/fail/taint_pointer_fail.rice
#[secure]
fn secure() -> int {
  0 
}

fn set(t: (int, int)) {
  t.0 := secure()
}

fn id(t: (int, int)) -> (int, int) {
  t
}

fn main() {
  let t = (0, 0) in
  set(t);
  let t2 = id(t) in
  println(int_to_string(t2.0))
}